<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_hotels_barLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_hotels_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toolbar_hotels_txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/toolbar_hotels_location"
                    android:textColor="@android:color/white"
                    tools:text="Cancún"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toolbar_hotels_dateIni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <EditText
                    android:id="@+id/toolbar_hotels_dateIni_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:focusableInTouchMode="false"
                    android:hint="@string/toolbar_hotels_dateIni"
                    android:textColor="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toolbar_hotels_dateEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <EditText
                    android:id="@+id/toolbar_hotels_dateEnd_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/toolbar_hotels_dateEnd"
                    android:textColor="@android:color/white"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">
                    <TextView
                        android:id="@+id/toolbar_hotels_rooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toolbar_hotels_rooms"
                        android:textColor="@color/textColorTitle"
                        android:layout_gravity="center"
                        android:textSize="15dp"/>
                    <TextView
                        android:id="@+id/toolbar_hotels_noRooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/toolbar_hotels_NoRooms"
                        android:textColor="@color/textColorTitle"
                        android:layout_gravity="center"
                        android:textSize="14dp"/>
                    <SeekBar
                        android:id="@+id/toolbar_hotels_seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/toolbar_hotels_rooms"
                        android:layout_gravity="center"
                        android:max="4"/>
            </LinearLayout>
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

    </android.support.design.widget.AppBarLayout>
