<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/room"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/noRoom"
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.38"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>
            <TextView
                android:id="@+id/txtA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/adults"
                android:textColor="@color/colorAccentAlpha"
                android:layout_marginTop="8dp"/>

            <at.markushi.ui.CircleButton
                android:id="@+id/roomAddAdult"
                android:layout_width="52dip"
                android:layout_height="52dip"
                android:src="@drawable/ic_add"
                app:cb_color="#0c3f66"
                app:cb_pressedRingWidth="8dip"
                android:layout_marginTop="8dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:layout_marginTop="24dp">
                <TextView
                    android:id="@+id/noAdults"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorAccentAlpha"
                    android:text="@string/one"
                    android:textSize="14dp"/>
            </RelativeLayout>
            <at.markushi.ui.CircleButton
                android:id="@+id/roomLessAdult"
                android:layout_width="52dip"
                android:layout_height="52dip"
                android:src="@drawable/ic_less"
                app:cb_color="#0c3f66"
                app:cb_pressedRingWidth="8dip"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">
            <TextView
                android:id="@+id/txtK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/kids"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorAccentAlpha"/>
            <at.markushi.ui.CircleButton
                android:id="@+id/roomAddKids"
                android:layout_width="52dip"
                android:layout_height="52dip"
                android:src="@drawable/ic_add"
                app:cb_color="#0c3f66"
                app:cb_pressedRingWidth="8dip"
                android:layout_marginTop="8dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:layout_marginTop="24dp">
                <TextView
                    android:id="@+id/noKids"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorAccentAlpha"
                    android:text="@string/one"
                    android:textSize="14dp"/>/>
            </RelativeLayout>

            <at.markushi.ui.CircleButton
                android:id="@+id/roomLessKids"
                android:layout_width="52dip"
                android:layout_height="52dip"
                android:src="@drawable/ic_less"
                app:cb_color="#0c3f66"
                app:cb_pressedRingWidth="8dip"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>